--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 <ul class="footer-social-list">
                     <li class="footer-social-item">
                         <a class="media-link footer-social-yt" href="#" target="_blank">
-                            <svg width="32" height="32" viewBox="0 0 32 32" fill="white"
+                            <svg class="icon" width="32" height="32" viewBox="0 0 32 32" fill="white"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M31.4506 0H0V32H31.4506V0Z" />
                                 <path
@@ -316,7 +316,7 @@
                     </li>
                     <li class="footer-social-item">
                         <a class="media-link footer-social-yt" href="#" target="_blank">
-                            <svg width="33" height="32" viewBox="0 0 33 32" fill="none"
+                            <svg class="icon" width="33" height="32" viewBox="0 0 33 32" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M32.1889 0H0.738281V32H32.1889V0Z" fill="white" />
                                 <g clip-path="url(#clip0_128_232)">
@@ -336,7 +336,7 @@
                     </li>
                     <li class="footer-social-item">
                         <a class="media-link footer-social-yt" href="#" target="_blank">
-                            <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                            <svg class="icon" width="32" height="32" viewBox="0 0 32 32" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M31.9252 0H0.474609V32H31.9252V0Z" fill="white" />
                                 <g clip-path="url(#clip0_128_240)">
@@ -356,7 +356,7 @@
                     </li>
                     <li class="footer-social-item">
                         <a class="media-link footer-social-yt" href="#" target="_blank">
-                            <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                            <svg class="icon" width="32" height="32" viewBox="0 0 32 32" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M31.6635 0H0.212891V32H31.6635V0Z" fill="white" />
                                 <g clip-path="url(#clip0_128_236)">
