--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                     <p class="subscribe-top">SUBSCRIBE</p>
                     <p class="subscribe-bottom">FOR OUR NEWLETTER AND PROMOTION</p>
                     <form class="subscribe-form">
-                        <input class="subscribe-mail" type="email" name="email" id="" placeholder="Enter Your Email">
+                        <input class="subscribe-mail" type="email" name="email" placeholder="Enter Your Email">
                         <button class="subscribe-button" type="submit">Subscribe</button>
                     </form>
                 </div>
