--- a/catalog.html
+++ b/catalog.html
@@ -404,6 +404,25 @@
                     Add to Cart</a>
             </div>
         </div>
+        <div class="pages">
+            <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.99512 2L3.99512 7L8.99512 12L7.99512 14L0.995117 7L7.99512 0L8.99512 2Z" fill="black" />
+            </svg>
+            <nav class="pages__numbers">
+                <ul class="pages__numbers__list">
+                    <li class="pages__number"><a href="#">1</a></li>
+                    <li class="pages__number"><a href="#">2</a></li>
+                    <li class="pages__number"><a href="#">3</a></li>
+                    <li class="pages__number"><a href="#">4</a></li>
+                    <li class="pages__number"><a href="#">5</a></li>
+                    <li class="pages__number"><a href="#">6.....20</a></li>
+                </ul>
+            </nav>
+            <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0.994995 12L5.995 7L0.994995 2L1.995 0L8.995 7L1.995 14L0.994995 12Z" fill="black" />
+            </svg>
+
+        </div>
     </section>
     <div class="advantages center">
         <article class="advantages__item">
