--- a/cart.html
+++ b/cart.html
@@ -83,7 +83,9 @@
                 <img class="cart__img" src="img/cart-product1.jpg" alt="man in T-Shirt">
                 <div class="cart__dsc">
                     <div class="cart__dsc__top">
-                        <h3 class="cart__dsc__name">MANGO PEOPLE<br>T-SHIRT</h3>
+                        <a href="product.html" class="cart__dsc__link">
+                            <h3 class="cart__dsc__name">MANGO PEOPLE<br>T-SHIRT</h3>
+                        </a>
                         <svg class="cart__dsc__top__close" width="18" height="18" viewBox="0 0 18 18" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -106,7 +108,9 @@
                 <img class="cart__img" src="img/cart-product2.jpg" alt="man in T-Shirt">
                 <div class="cart__dsc">
                     <div class="cart__dsc__top">
-                        <h3 class="cart__dsc__name">MANGO PEOPLE<br>T-SHIRT</h3>
+                        <a href="product.html" class="cart__dsc__link">
+                            <h3 class="cart__dsc__name">MANGO PEOPLE<br>T-SHIRT</h3>
+                        </a>
                         <svg class="cart__dsc__top__close" width="18" height="18" viewBox="0 0 18 18" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
