--- a/cart.html
+++ b/cart.html
@@ -144,16 +144,18 @@
                 <button class="cart__right__button" type="submit">GET A QUOTE</button>
             </form>
             <div class="total">
-                <div class="total__subtotal">
-                    <p>SUB TOTAL</p>
-                    <p>$900</p>
+                <div class="total__box">
+                    <div class="total__subtotal">
+                        <p>SUB TOTAL</p>
+                        <p>$900</p>
+                    </div>
+                    <div class="total__grandtotal">
+                        <p>GRAND TOTAL</p>
+                        <p class="total__grandtotal__price">$900</p>
+                    </div>
+                    <div class="total__band"></div>
+                    <a class="total__button" href="#">PROCEED TO CHECKOUT</a>
                 </div>
-                <div class="total__grandtotal">
-                    <p>GRAND TOTAL</p>
-                    <p class="total__grandtotal__price">$900</p>
-                </div>
-                <div class="total__band"></div>
-                <a class="total__button" href="#">PROCEED TO CHECKOUT</a>
             </div>
         </div>
     </main>
