--- a/cart.html
+++ b/cart.html
@@ -134,9 +134,10 @@
                 <a class="cart__button" href="catalog.html">CONTINUE SHOPPING</a>
             </div>
         </div>
+        <h2 class="cart__right__title_small">SHIPPING ADRESS</h2>
         <div class="cart__right">
+            <h2 class="cart__right__title">SHIPPING ADRESS</h2>
             <form class="cart__right__form" action="#">
-                <h2 class="cart__right__title">SHIPPING ADRESS</h2>
                 <input class="cart__right__input cart__right__active" type="text" name="country" required
                     placeholder="Bangladesh">
                 <input class="cart__right__input" type="text" name="country" required placeholder="State">
