--- a/registration.html
+++ b/registration.html
@@ -75,7 +75,7 @@
         </div>
     </header>
 
-    <h1 class="cart__title center">REGISTRATION</h1>
+    <h1 class="cart__title title__registration center">REGISTRATION</h1>
 
     <main class="registration__content center">
         <div class="registration__left">
