--- a/cart.html
+++ b/cart.html
@@ -138,8 +138,8 @@
                 </div>
             </div>
             <div class="cart__buttons">
-                <button class="cart__button">CLEAR SHOPPING CART</button>
-                <a class="cart__button" href="catalog.html">CONTINUE SHOPPING</a>
+                <button class="cart__button">Clear shopping cart</button>
+                <a class="cart__button" href="catalog.html">Continue shopping</a>
             </div>
         </div>
         <h2 class="cart__right__title_small">SHIPPING ADRESS</h2>
