--- a/product.html
+++ b/product.html
@@ -91,7 +91,7 @@
             </svg>
 
         </a>
-        <img width="466px" height="565px" src="img/slider-medium.jpg" alt="slider photo">
+        <img src="img/slider-medium.jpg" alt="slider photo">
         <a href="" class="slider__arrow slider__arrow_right">
             <svg width="13" height="23" viewBox="0 0 13 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
