--- a/catalog.html
+++ b/catalog.html
@@ -213,6 +213,7 @@
         </div>
     </div>
     <section class="product-box center">
+        <h2 class="hidden">product</h2>
         <div class="product-box__content">
             <div class="product">
                 <a href="product.html"><img class="product__img" src="img/product1.jpg" alt="man in jacket"></a>
@@ -455,7 +456,6 @@
                 Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.
             </p>
         </article>
-    </div>
     </div>
     <footer class="footer">
         <div class="footer-top center">
