--- a/product.html
+++ b/product.html
@@ -180,6 +180,7 @@
         </div>
     </section>
     <section class="product-box center">
+        <h2 class="hidden">product</h2>
         <div class="product-box__content product-box__product">
             <div class="product">
                 <img class="product__img" src="img/cart-product1.jpg" alt="">
